base/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "gce"  # Use GCE ingress controller
    # networking.gke.io/managed-certificates: "managed-cert"
    kubernetes.io/ingress.global-static-ip-name: "abhi-static-ip"
    # networking.gke.io/v1beta1.FrontendConfig: nginx-frontendconfig
spec:
  # defaultBackend:
  #   service:
  #     name: external-nginx
  #     port:
  #       number: 80
  ingressClassName: gce
  rules:
    - host: nginx.tecsolution.solutions  # Replace with your Argo CD domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
  tls:
  - hosts:
    - nginx.tecsolution.solutions
    secretName: prod-sec
